# creating

./: .editorconfig  .gitignore  .tmux.conf  .vimrc  .vimspector.json  interactive.mjs  package-lock.json  package.json  packing.py  router.js  server.js  test.py  tsconfig.json  wrangler.toml
CRATER/: .editorconfig  Cargo.toml
CRATER/crater/: Cargo.toml
CRATER/crater/src/: main.rs
DB_models/: db.auth.procedures.js  db.settings.js  db.tokens.stored.js  db.transactions.js
app_node/: .gitignore  crate_puzzle.js  cubing.js  test.js  web_dev.vim
auth/: encriptation.module.js  encryptation.module.js  user.check.out.js
config/: config.js
controllers/: estimate.controller.js  external.API.request.js  user.controller.js
d1-tutorial/: package.json  wrangler.toml
docker/: Dockerfile  docker-compose.yml  mime.types  nginx.conf
home/: index.html  stylehome.css
login/: index.html  login.check.mjs  login.css
middlewares/: add.middleware.js
migrations/: 20230208030940-crate-users.js  20230209064152-data-crates.js  20230301181657-expired_tokens.js  20230301194414-suspicious_tokens.js  20241011164716-artMoves.js
otto/: css.js  package.json  rollup.config.mjs  server.app.js
otto-API-server/: wrangler.toml
otto-app-ts/: package.json  worker-configuration.d.ts  wrangler.toml
otto-main-worker/: ottoSchema.sql  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
proxy/: nginx.conf
routs/: router.js
seeders/: 20230209070700-first-user.js  20240211042310-add-user.js
simple_python/: .gitignore  .vimspector.json  app.py  big_work.py  (+4 more)
(+348 files in other folders)
