[package]
name = "crater"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Joarell <josephjoarell@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4" # For executing Rust Future as a Promise
labors = { path = "../labors" }


# If you are making a library, do not enable this feature as it will pull in client-side rendering logic into the server-side rendering bundle.
# If you need the Renderer for testing or examples, you should enable it in the dev-dependencies instead.
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

gloo-net = "0.5.0" # For making fetch call.
serde = { version = "1.0", features = ["derive"] } # with derive feature For de-serializing the JSON response
